1.6-9/9/2025